--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "boxunphp/php-cache",
+  "name": "boxunphp/cache",
   "description": "PHP缓存类",
   "type": "library",
   "license": "MIT",
@@ -15,11 +15,11 @@
   },
   "require": {
     "php": "^7.2",
-    "boxunphp/php-instance": "dev-master",
-    "boxunphp/php-exception": "dev-master",
-    "boxunphp/php-redis": "dev-master",
-    "boxunphp/php-memcached": "dev-master",
-    "boxunphp/php-config": "dev-master"
+    "boxunphp/instance": "^2.0",
+    "boxunphp/exception": "^2.0",
+    "boxunphp/redis": "^2.0",
+    "boxunphp/memcached": "^2.0",
+    "boxunphp/config": "^2.0"
   },
   "autoload": {
     "psr-4": {
